# bevy-space-rts

./: Cargo.toml  README.md
assets/data/: ship1.json
assets/data/assemblies/: assm1.json  cruiser1.json  frigate1.json
assets/data/fx/: explo_a_sheet.json
assets/data/projectiles/bp1/: bp1.json
assets/data/subunits/pdc1/: pdc1.json
assets/data/subunits/thruster1/: thruster1.json
assets/data/subunits/thruster2/: thruster2.json
assets/data/subunits/turret1/: turret1.json
docs/internal/: notes.md
konquer/: Cargo.toml
konquer/src/: animation.rs  camera.rs  components.rs  data.rs  environment.rs  inputs.rs  lib.rs  loader.rs  quadtree.rs  spawner.rs  ui.rs
src/: main.rs
