[package]
name = "konquer-rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
fixed = "1.16.0"
rand = "0.8.5"
konquer = { path = "konquer" }
bevy_prototype_lyon = "0.5.0"
bevy_common_assets = "0.2.0"

[workspace]
resolver = "2"
